# solana-programs

./: .clippy.toml  .gitignore  AGENTS.md  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package.json  rustfmt.toml  tsconfig.json  txtx.yml
.claude/skills/d-and-m-qa-tester/: SKILL.md
.claude/skills/solana-refactoring-specialist/: SKILL.md
.specify/memory/: constitution.md
crates/boss-system/: Cargo.toml
crates/boss-system/src/: bosses.rs  errors.rs  lib.rs  scaling.rs  selection.rs  traits.rs
crates/combat-system/: Cargo.toml
crates/combat-system/src/: constants.rs  effects.rs  engine.rs  lib.rs  state.rs  triggers.rs
crates/field-enemies/: Cargo.toml
crates/field-enemies/src/: archetypes.rs  constants.rs  lib.rs  state.rs  traits.rs
crates/vrf-rng/: Cargo.toml
crates/vrf-rng/src/: lib.rs
docs/: ITEM_DISCREPANCY_REPORT.md
migrations/: deploy.ts
programs/boss-system/: Cargo.toml
programs/boss-system/src/: bosses.rs  errors.rs  lib.rs  scaling.rs  selection.rs  traits.rs
programs/combat-system/: Cargo.toml
programs/combat-system/src/: constants.rs  effects.rs  engine.rs  errors.rs  lib.rs  state.rs  triggers.rs
programs/field-enemies/: Cargo.toml
programs/field-enemies/src/: archetypes.rs  errors.rs  lib.rs  spawner.rs  state.rs  traits.rs
programs/gameplay-state/: Cargo.toml
programs/gameplay-state/src/: combat_scenarios_tests.rs  constants.rs  errors.rs  lib.rs  movement.rs  state.rs  stats.rs
programs/map-generator/: Cargo.toml
programs/map-generator/src/: constants.rs  errors.rs  lib.rs  maze.rs  rng.rs  state.rs
programs/nft-marketplace/: Cargo.toml
programs/nft-marketplace/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/player-inventory/: Cargo.toml
programs/player-inventory/src/: constants.rs  effects.rs  errors.rs  fusion.rs  items.rs  itemsets.rs  lib.rs  nft_items.rs  offers.rs  special_items.rs  state.rs
programs/player-profile/: Cargo.toml
programs/player-profile/src/: bitmask.rs  constants.rs  errors.rs  lib.rs  state.rs
programs/poi-system/: Cargo.toml
programs/poi-system/src/: errors.rs  interactions.rs  lib.rs  offers.rs  pois.rs  spawn.rs  state.rs
programs/session-manager/: Cargo.toml
programs/session-manager/src/: constants.rs  errors.rs  lib.rs  state.rs
runbooks/: README.md
runbooks/deployment/: main.tx  subgraphs.localnet.tx
scripts/: check-echo-gear.ts  init-collections.ts  init.ts  mint-nft.ts  verify-echo-match.ts
specs/: balance-fixes-revised.md  balance-fixes.md  gdd.md
specs/001-solana-core-programs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-solana-core-programs/checklists/: requirements.md
specs/001-solana-core-programs/contracts/: map_generator.idl.json  player_profile.idl.json  session_manager.idl.json
specs/002-gameplay-state-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gameplay-state-tracking/checklists/: requirements.md
specs/002-gameplay-state-tracking/contracts/: gameplay-state.idl.md
specs/003-combat-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-combat-system/checklists/: requirements.md
specs/003-combat-system/contracts/: combat_system.idl.json
specs/004-item-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-item-system/checklists/: requirements.md
specs/004-item-system/contracts/: player_inventory.idl.json
specs/005-field-enemies/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-field-enemies/checklists/: requirements.md
specs/005-field-enemies/contracts/: anchor-idl.md
specs/006-boss-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-boss-system/checklists/: requirements.md
specs/006-boss-system/contracts/: boss_system.idl.json
specs/007-poi-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-poi-system/checklists/: requirements.md
specs/007-poi-system/contracts/: poi-system.idl.md
specs/008-item-offer-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-item-offer-generation/checklists/: requirements.md
specs/008-item-offer-generation/contracts/: poi-system-extensions.idl.md
specs/010-core-gameplay-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-core-gameplay-loop/checklists/: requirements.md
specs/010-core-gameplay-loop/contracts/: gameplay-state.md  player-profile.md  poi-system.md  session-manager.md
tests/: gameplay-state.ts  map-generator.ts  player-profile.ts  session-manager.ts
tests/combat-system/: basic_combat.ts  determinism.ts  multi_strike.ts  status_effects.ts  triggers.ts
tests/e2e/shared/: pda-helpers.ts  setup.ts
tests/e2e/track1-nft/: 01-nft-marketplace-e2e.ts
tests/e2e/track2-gameplay/: 01-gameplay-e2e.ts  02-boss-death-undelegation-e2e.ts  03-poi-interactions-e2e.ts
tests/field-enemies/: field-enemies.ts
tests/gameplay-state/: gameplay-state.ts
tests/map-generator/: map-generator.ts
tests/player-inventory/: inventory_management.ts
tests/player-profile/: player-profile.ts
tests/poi-system/: poi-system.ts
tests/session-manager/: manual-session-delegate-flow.ts  session-manager.ts
