[workspace]
members = [
    "programs/player-profile",
    "programs/session-manager",
    "programs/map-generator",
    "programs/gameplay-state",
    "programs/combat-system"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
