[workspace]
members = [
    "programs/player-profile",
    "programs/session-manager",
    "programs/map-generator",
    "programs/gameplay-state",
    "crates/combat-system",
    "programs/player-inventory",
    "crates/field-enemies",
    "crates/boss-system",
    "programs/poi-system"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
