[workspace]
members = [
    "programs/player-profile",
    "programs/session-manager",
    "programs/map-generator",
    "programs/gameplay-state",
    "crates/combat-system",
    "programs/player-inventory",
    "crates/field-enemies",
    "crates/boss-system",
    "crates/vrf-rng",
    "programs/poi-system",
    "programs/nft-marketplace"
]
resolver = "2"

[workspace.dependencies]
rmp = "=0.8.14"
rmp-serde = "=1.3.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
