[package]
name = "field-enemies"
version = "0.1.0"
description = "Field Enemies Program for dungeon crawl enemy spawning and management"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "field_enemies"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
combat-system = { path = "../../crates/combat-system" }
