[package]
name = "boss-system"
version = "0.1.0"
description = "Boss System Program for dungeon crawl boss definitions, scaling, and combat integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boss_system"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
combat-system = { path = "../combat-system", features = ["cpi"] }
