[package]
name = "combat-system"
version = "0.1.0"
description = "Combat System Program for deterministic auto-battle"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "combat_system"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
