[package]
name = "field-enemies"
version = "0.1.0"
description = "Field Enemies Program for dungeon crawl enemy spawning and management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "field_enemies"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
combat-system = { path = "../combat-system", features = ["cpi"] }
map-generator = { path = "../map-generator", features = ["cpi"] }
