[package]
name = "gameplay-state"
version = "0.1.0"
description = "Gameplay State Tracking Program for on-chain game state management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gameplay_state"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dev-dependencies]
sha2 = "0.10"

[dependencies]
anchor-lang = "0.32.0"
combat-system = { path = "../../crates/combat-system" }
map-generator = { path = "../map-generator", features = ["no-entrypoint"] }
field-enemies = { path = "../../crates/field-enemies" }
boss-system = { path = "../../crates/boss-system" }
player-inventory = { path = "../player-inventory", features = ["cpi"] }
