[package]
name = "map-generator"
version = "0.1.0"
description = "Map Generator Program for deterministic procedural dungeon generation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "map_generator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
