[package]
name = "map-generator"
version = "0.1.0"
description = "Map Generator Program for deterministic procedural dungeon generation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "map_generator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
mock-vrf = ["vrf-rng/mock-vrf"]

[dependencies]
anchor-lang = "0.32.0"
ephemeral-rollups-sdk = { version = "0.7.3", features = ["anchor", "disable-realloc"] }
vrf-rng = { path = "../../crates/vrf-rng", features = ["anchor"] }
