[package]
name = "map-generator"
version = "0.1.0"
description = "Map Generator Program for deterministic procedural dungeon generation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "map_generator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
mock-vrf = ["vrf-rng/mock-vrf"]
local-rng = []

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.7.3", features = ["anchor", "disable-realloc"] }
ephemeral-vrf-sdk = { version = "0.2.3", features = ["anchor"] }
vrf-rng = { path = "../../crates/vrf-rng", features = ["anchor"] }
