[package]
name = "nft-marketplace"
version = "0.1.0"
description = "NFT Marketplace and Quest System for Dungeons & Moles"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
local-rng = []

[dependencies]
anchor-lang = "0.32.0"
mpl-core = { version = "0.11.1", features = ["anchor"] }
