[package]
name = "player-inventory"
version = "0.1.0"
description = "Player Inventory Program for item management, fusion, and combat integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "player_inventory"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
local-rng = []

[dependencies]
anchor-lang = "0.32.0"
ephemeral-rollups-sdk = { version = "0.7.3", features = ["anchor", "disable-realloc"] }
combat-system = { path = "../../crates/combat-system" }

[dev-dependencies]
sha2 = "0.10"
