[package]
name = "player-profile"
version = "0.1.0"
description = "Player Profile Program for Dungeons & Moles"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "player_profile"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
local-rng = []

[dependencies]
anchor-lang = "0.32.0"
