[package]
name = "poi-system"
version = "0.1.0"
description = "POI System Program for Points of Interest interactions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poi_system"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
mock-vrf = ["vrf-rng/mock-vrf"]
local-rng = []

[dev-dependencies]
sha2 = "0.10"

[dependencies]
anchor-lang = "0.32.0"
ephemeral-rollups-sdk = { version = "0.7.3", features = ["anchor", "disable-realloc"] }
player-inventory = { path = "../player-inventory", features = ["cpi"] }
boss-system = { path = "../../crates/boss-system" }
gameplay-state = { path = "../gameplay-state", features = ["cpi"] }
session-manager = { path = "../session-manager", features = ["cpi"] }
vrf-rng = { path = "../../crates/vrf-rng", features = ["anchor"] }
