[package]
name = "session-manager"
version = "0.1.0"
description = "Session Manager Program for MagicBlock Ephemeral Rollup integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "session_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
gameplay-state = { path = "../gameplay-state", features = ["cpi"] }
map-generator = { path = "../map-generator", features = ["cpi"] }
player-inventory = { path = "../player-inventory", features = ["cpi"] }
# NOTE: poi-system dependency removed to avoid cyclic dependency
# NOTE: ephemeral-rollups-sdk is temporarily disabled due to blake3 v1.8.3 requiring
# edition2024 which is not supported by the Solana platform tools bundled cargo (1.84.0).
# The SDK will be added once Anchor tooling is updated.
# ephemeral-rollups-sdk = { version = "0.8.0", features = ["anchor"] }
