[package]
name = "session-manager"
version = "0.1.0"
description = "Session Manager Program for MagicBlock Ephemeral Rollup integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "session_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dev-dependencies]
sha2 = "0.10"

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
gameplay-state = { path = "../gameplay-state", features = ["cpi"] }
map-generator = { path = "../map-generator", features = ["cpi"] }
player-inventory = { path = "../player-inventory", features = ["cpi"] }
# NOTE: poi-system dependency removed to avoid cyclic dependency
ephemeral-rollups-sdk = { version = "0.7.3", features = ["anchor", "disable-realloc"] }
vrf-rng = { path = "../../crates/vrf-rng" }
